[gd_scene load_steps=3 format=3 uid="uid://c4jxi0kqi0i2d"]

[ext_resource type="Script" uid="uid://cpssl2vhjuupd" path="res://addons/node_filtering/node_filtering_panel.gd" id="1_nr4it"]
[ext_resource type="Texture2D" uid="uid://4t3o4iv3ugkj" path="res://addons/node_filtering/clear_icon.png" id="2_fqv13"]

[node name="NodeFiltering" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nr4it")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainGrid" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RefreshBtn" type="Button" parent="MarginContainer/MainGrid"]
layout_mode = 2
focus_mode = 0
text = "Refresh
"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainGrid"]
layout_mode = 2
size_flags_vertical = 3

[node name="Filter" type="Label" parent="MarginContainer/MainGrid/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Filter:"

[node name="MainContainer" type="HBoxContainer" parent="MarginContainer/MainGrid/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainGrid/HBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/MainGrid/HBoxContainer/MainContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
all_tabs_in_front = true
drag_to_rearrange_enabled = true
tab_focus_mode = 0

[node name="Control" type="Control" parent="MarginContainer/MainGrid/HBoxContainer/MainContainer/ScrollContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Clear" type="Button" parent="MarginContainer/MainGrid/HBoxContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("2_fqv13")
metadata/_custom_type_script = "uid://dm2kqxb60oa6y"

[connection signal="pressed" from="MarginContainer/MainGrid/RefreshBtn" to="." method="_on_refresh_btn_pressed"]
[connection signal="pressed" from="MarginContainer/MainGrid/HBoxContainer/MainContainer/Clear" to="." method="_on_clear_pressed"]
